--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,10 @@ buildscript {
         maven {url 'https://jitpack.io'}
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath 'io.fabric.tools:gradle:1.25.4'
         classpath 'com.google.gms:google-services:4.0.1'
+        classpath 'com.appsee:appsee-plugin:+'
         
 
         // NOTE: Do not place your application dependencies here; they belong
