--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,15 @@
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'
-apply plugin: 'com.appsee.appsee-plugin'
+apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.firebase.crashlytics'
+
 
 android {
 
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.gametimegiving.android"
-        minSdkVersion 16
-        targetSdkVersion 27
+        minSdkVersion 21
+        targetSdkVersion 28
         versionCode 19
         versionName "1.47"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -28,6 +29,7 @@ android {
         debug {
         }
     }
+
 }
 
 dependencies {
@@ -41,24 +43,25 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     //Firebase Libraries
-    implementation 'com.google.firebase:firebase-core:16.0.8'
-    implementation 'com.google.firebase:firebase-firestore:18.2.0'
-    implementation 'com.google.firebase:firebase-auth:16.2.1'
-    implementation 'com.google.firebase:firebase-storage:16.1.0'
-    implementation 'com.firebaseui:firebase-ui-storage:3.2.1'
-    implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
-    implementation 'com.google.firebase:firebase-messaging:17.6.0'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
+    implementation 'com.google.firebase:firebase-core:19.0.0'
+    implementation 'com.google.firebase:firebase-firestore:23.0.3'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.firebaseui:firebase-ui-storage:8.0.0'
+    implementation 'com.firebaseui:firebase-ui-auth:8.0.0'
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
+    //implementation 'com.google.firebase:firebase-crashlytics:28.3.1'
     implementation 'com.facebook.android:facebook-android-sdk:4.34.0'
-    implementation('com.twitter.sdk.android:twitter:3.3.0@aar') { transitive = true }
-    implementation 'com.braintreepayments.api:drop-in:3.4.0'
+   // implementation('com.twitter.sdk.android:twitter:3.3.0@aar') { transitive = true }
+    implementation 'com.braintreepayments.api:drop-in:4.3.0'
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'io.card:android-sdk:5.5.1'
     implementation'pl.droidsonroids.gif:android-gif-drawable:1.2.15'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
-    compile 'com.android.volley:volley:1.1.1'
-    implementation 'com.appsee:appsee-android:+'
+    implementation 'com.android.volley:volley:1.2.0'
+   // implementation 'com.appsee:appsee-android:+'
+    //implementation 'com.mparticle:android-example-kit:4+'
 
 //   // implementation 'com.github.Shashank02051997:FancyGifDialog-Android:1.1'
 //    implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
