--- a/build.gradle
+++ b/build.gradle
@@ -6,16 +6,19 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
-        maven {url 'https://maven.fabric.io/public'}
         maven {url 'https://jitpack.io'}
+        maven {
+            url "https://cardinalcommerceprod.jfrog.io/artifactory/android"
+            credentials {
+                username 'braintree_team_sdk'
+                password 'AKCp8jQcoDy2hxSWhDAUQKXLDPDx6NYRkqrgFLRc3qDrayg6rrCbJpsKKyMwaykVL8FWusJpp'
+            }
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath 'io.fabric.tools:gradle:1.25.4'
-        classpath 'com.google.gms:google-services:4.0.1'
-        classpath 'com.appsee:appsee-plugin:+'
-        
-
+        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -25,9 +28,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-        }
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
